objects/alm_pm2__VC_Repository_Validation__c.object
<CustomObject>
 <fullName>alm_pm2__VC_Repository_Validation__c</fullName>
 <fields>
  <fullName>alm_pm2__ExternalID__c</fullName>
  <description>External Id used to match this record uniquely</description>
  <externalId>true</externalId>
  <inlineHelpText>External Id used to match this record uniquely</inlineHelpText>
  <label>ExternalID</label>
  <length>100</length>
  <type>Text</type>
  <unique>true</unique>
 </fields>
 <fields>
  <fullName>alm_pm2__SuccessfulValidation__c</fullName>
  <defaultValue>false</defaultValue>
  <description>Represents the success status of this validation attempt</description>
  <inlineHelpText>Represents the success status of this validation attempt</inlineHelpText>
  <label>Successful Validation</label>
  <type>Checkbox</type>
 </fields>
 <fields>
  <fullName>alm_pm2__VC_Repository__c</fullName>
  <description>The repository for which this validation was attempted</description>
  <inlineHelpText>The repository for which this validation was attempted</inlineHelpText>
  <label>VC Repository</label>
  <referenceTo>alm_pm2__VC_Repository__c</referenceTo>
  <relationshipLabel>VC Repository Validations</relationshipLabel>
  <relationshipName>VC_Repository_Validations</relationshipName>
  <relationshipOrder>0</relationshipOrder>
  <type>MasterDetail</type>
 </fields>
 <fields>
  <fullName>alm_pm2__ValidationDate__c</fullName>
  <description>Date / Time when the validation occurred</description>
  <inlineHelpText>Date / Time when the validation occurred</inlineHelpText>
  <label>Validation Date</label>
  <type>DateTime</type>
 </fields>
 <fields>
  <fullName>alm_pm2__ValidationError__c</fullName>
  <description>Errors that occurred when attempting the validation</description>
  <inlineHelpText>Errors that occurred when attempting the validation</inlineHelpText>
  <label>Validation Error</label>
  <length>32768</length>
  <type>LongTextArea</type>
 </fields>
 <label>VC Repository Validation</label>
 <nameField>
  <displayFormat>VCRV-{0000}</displayFormat>
  <label>VC Repository Validation Name</label>
  <type>AutoNumber</type>
 </nameField>
 <pluralLabel>VC Repository Validations</pluralLabel>
 <sharingModel>ControlledByParent</sharingModel>
</CustomObject>